# qa-auto-engineer-python-project-314

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
pages/: base_page.py  base_table_page.py  label_page.py  login_page.py  statuses_page.py  tasks_page.py  users_page.py
pages/locators/: labels_locators.py  statuses_locators.py  tasks_locators.py  users_locators.py
tests/: test_labels.py  test_login.py  test_logout.py  test_smoke.py  test_statuses.py  test_tasks.py  test_users.py
tests/test_data/: label.py  login.py  statuses.py  tasks.py  upd_label.py  upd_statuses.py  upd_tasks.py  upd_users.py  users.py
